# FLowHub

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json
app/src/: main.tsx  styles.css
app/src-tauri/: Cargo.toml  flowhub.db  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/download/: Cargo.toml
crates/download/src/: lib.rs
crates/send/: Cargo.toml
crates/send/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
