[workspace]
members = [
  "app/src-tauri",
  "crates/core",
  "crates/discovery",
  "crates/send",
  "crates/download",
  "crates/storage"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.com/flowhub"

[workspace.dependencies]
anyhow = "1"
aria2-ws = { path = "crates/download" }
flowhub-core = { path = "crates/core" }
flowhub-discovery = { path = "crates/discovery" }
flowhub-send = { path = "crates/send" }
flowhub-storage = { path = "crates/storage" }
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-dialog = "2"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

