[package]
name = "flowhub-desktop"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
flowhub-core.workspace = true
flowhub-discovery.workspace = true
flowhub-download = { package = "aria2-ws", path = "../../crates/download" }
flowhub-send.workspace = true
flowhub-storage.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true

